@startuml error-flow
title Обработка ошибок - как сбой становится телом ответа

skinparam shadowing false
skinparam ArrowFontSize 11

actor Client

box "Netty / WebFlux" #F7F7F7
  participant "Цепочка фильтров\nбезопасности" as Filters
  participant "DispatcherHandler" as Dispatcher
  participant "AuthController" as Ctl
end box

box "пакет error" #EEF6FF
  participant "ApiAuthenticationEntryPoint\nApiAccessDeniedHandler" as SecHandlers
  participant "SecurityErrorWriter" as Writer
  participant "GlobalExceptionHandler\n@RestControllerAdvice" as Advice
  participant "ErrorResponseFactory" as Factory
end box

participant "Tracer\n(micrometer)" as Tracer

== Дорога B - отказ до того, как выбран обработчик ==

Client -> Filters : GET /api/v1/auth/me, без токена
activate Filters
Filters -> SecHandlers : commence(exchange, AuthenticationException)
activate SecHandlers
SecHandlers -> Writer : write(exchange, AUTHENTICATION_REQUIRED)
activate Writer
Writer -> Factory : create(code, message, [], path)
activate Factory
Factory -> Tracer : currentSpan()
Tracer --> Factory : traceId (или "unavailable")
Factory --> Writer : ErrorResponse
deactivate Factory
note right of Writer
  Внутри цепочки фильтров не работает
  ни один конвертер сообщений, поэтому
  тело сериализуется руками и пишется
  в ответ как DataBuffer.
end note
Writer --> Client : 401 + JSON
deactivate Writer
deactivate SecHandlers
deactivate Filters

== Дорога A - запрос дошёл до обработчика ==

Client -> Filters : POST /api/v1/auth/login
Filters -> Dispatcher : пропущен
activate Dispatcher
Dispatcher -> Ctl : login(request)
activate Ctl
Ctl --> Dispatcher : бросает ApiException(INVALID_CREDENTIALS)
deactivate Ctl
Dispatcher -> Advice : подходящий @ExceptionHandler
activate Advice
Advice -> Factory : create(code, message, details, path)
activate Factory
Factory -> Tracer : currentSpan()
Tracer --> Factory : traceId
Factory --> Advice : ErrorResponse
deactivate Factory
Advice -> Advice : log.error для 5xx,\nlog.warn для 4xx
Advice --> Dispatcher : ResponseEntity<ErrorResponse>
deactivate Advice
Dispatcher --> Client : 401 + JSON (та же форма)
deactivate Dispatcher

note over Factory
  Обе дороги заканчиваются здесь.
  Один сборщик = одна форма тела.
end note

@enduml


@startuml error-classes
title пакет error - за что отвечает каждый класс

skinparam shadowing false
skinparam classAttributeIconSize 0

enum ErrorCode {
  VALIDATION_ERROR : 400
  INVALID_CREDENTIALS : 401
  AUTHENTICATION_REQUIRED : 401
  REFRESH_TOKEN_INVALID : 401
  ACCESS_DENIED : 403
  NOT_FOUND : 404
  METHOD_NOT_ALLOWED : 405
  USER_ALREADY_EXISTS : 409
  UNSUPPORTED_MEDIA_TYPE : 415
  INTERNAL_ERROR : 500
  DEPENDENCY_UNAVAILABLE : 503
  REGISTRATION_INCONSISTENT : 503
  --
  - HttpStatus status
  - String defaultMessage
}
note right of ErrorCode
  Единственный источник правды.
  Строка статуса, поле "status" и
  поле "error" в теле приходят из
  одной строки здесь - разойтись
  они не могут.
end note

class ApiException <<RuntimeException>> {
  - ErrorCode errorCode
  - List<String> details
}
note right of ApiException
  Один класс на любой сбой, который мы
  поднимаем сами. Случай несёт код, а не
  тип - отдельный подкласс стоит заводить
  только тогда, когда именно этот случай
  надо ловить отдельно.
end note

class ErrorResponseFactory <<@Component>> {
  + ErrorResponse create(code, message, details, path)
  - String currentTraceId()
}

class GlobalExceptionHandler <<@RestControllerAdvice>> {
  + handleApiException(ApiException)
  + handleValidation(WebExchangeBindException)
  + handleUnreadableInput(ServerWebInputException)
  + handleResponseStatus(ResponseStatusException)
  + handleAuthentication(AuthenticationException)
  + handleAccessDenied(AccessDeniedException)
  + handleUnexpected(Exception)
}

class SecurityErrorWriter <<@Component>> {
  + Mono<Void> write(exchange, ErrorCode)
}

class ApiAuthenticationEntryPoint <<@Component>> {
  + Mono<Void> commence(exchange, ex)
}

class ApiAccessDeniedHandler <<@Component>> {
  + Mono<Void> handle(exchange, ex)
}

interface ServerAuthenticationEntryPoint <<spring-security>>
interface ServerAccessDeniedHandler <<spring-security>>

class ErrorResponse <<сгенерирован>> {
  timestamp, path, status,
  error, message, traceId, details
}
note bottom of ErrorResponse
  Сгенерирован из individuals-api.yaml.
  Форму задаёт не код здесь, а контракт.
end note

ApiAuthenticationEntryPoint ..|> ServerAuthenticationEntryPoint
ApiAccessDeniedHandler ..|> ServerAccessDeniedHandler

ApiAuthenticationEntryPoint --> SecurityErrorWriter
ApiAccessDeniedHandler --> SecurityErrorWriter
SecurityErrorWriter --> ErrorResponseFactory
GlobalExceptionHandler --> ErrorResponseFactory
ErrorResponseFactory ..> ErrorResponse : собирает
ErrorResponseFactory ..> ErrorCode : читает статус\nи текст
ApiException --> ErrorCode
GlobalExceptionHandler ..> ApiException : разворачивает

@enduml


@startuml error-fields
title Откуда берётся каждое поле ответа

skinparam shadowing false

object "HTTP-ответ" as Answer {
  строка статуса = ErrorCode.getStatus()
  Content-Type = конвертер / выставлен руками
  --
  timestamp = OffsetDateTime.now(UTC)
  path      = exchange.getRequest().getPath()
  status    = ErrorCode.getStatus().value()
  error     = ErrorCode.name()
  message   = аргумент, по умолчанию из ErrorCode
  traceId   = Tracer.currentSpan(), иначе "unavailable"
  details   = ApiException / BindingResult, пусто -> null
}

object "ErrorCode" as Code {
  name()           -> error
  getStatus()      -> строка статуса И поле status
  getDefaultMessage() -> message
}

object "ErrorResponseFactory" as Factory {
  заполняет 5 из 7 полей тела
}

object "вызывающий" as Caller {
  GlobalExceptionHandler
  SecurityErrorWriter
}

Code --> Factory : читает
Caller --> Factory : message, details, path
Factory --> Answer : собирает

note bottom of Code
  "error" - это имя самой константы.
  Переименование константы меняет публичный
  контракт, а компилятор промолчит.
end note

note bottom of Factory
  Статус попадает в ответ дважды из одного
  источника - строка и поле никогда
  не разойдутся.
end note

@enduml
